[project]
name = "kaonavi-mcp-server"
version = "0.1.0"
license = { file = "LICENSE" }
description = "Kaonavi MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.11.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-pythonpath>=0.7.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
strict = true
show_error_codes = true
pretty = true
warn_unused_configs = true
allow_untyped_decorators = true
disable_error_code = ["no-untyped-call"]
